Bug 25744 - ConsoleKit doesn't work sometimes when activated
Summary: ConsoleKit doesn't work sometimes when activated
Status: RESOLVED FIXED
Alias: None
Product: ConsoleKit
Classification: Unclassified
Component: Daemon (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: william.jon.mccann
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-21 08:20 UTC by Ray Strode [halfline]
Modified: 2010-01-28 15:29 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Ray Strode [halfline] 2009-12-21 08:20:04 UTC
Downstream report is here:

https://bugzilla.redhat.com/show_bug.cgi?id=545267

Relevant quote:

okay after about 20 reboots I got this to happen on my system with the latest
dbus and consolekit.

It looks like we're hitting *another* bug by being the first user to use
ConsoleKit.

There's one thing that looks suspicious in the ConsoleKit code.  We take a name
on the bus before we register a handler for the call GDM is making.

So the race could be something like:

1) GDM calls OpenSessionWithParameters
2) d-bus notices consolekit isn't running and starts it
3) consolekit starts up and takes a name on the bus
4) consolekit registers handlers for the methods it supports
5) consolekit enters its event loop to process events


When the d-bus daemon notices ConsoleKit has taken a name (step 3) it delivers
the pending gdm call.  If that happens before step 4 then it could explain this
behavior.
Comment 1 william.jon.mccann 2010-01-28 15:29:30 UTC
Seems like fixed in master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.