Don't take bus name until ready

Previously, we would take a bus name right away, but
not register the manager object until later.  This
causes a race when being activated by a method call
on the manager object, where ConsoleKit gets started
but the method call fails.

https://bugs.freedesktop.org/show_bug.cgi?id=25744