src/main.c
@@ -294,8 +294,16 @@ main (int    argc,
 
         setup_debug_log (debug);
 
+        g_debug ("initializing console-kit-daemon %s", VERSION);
+
         connection = get_system_bus ();
         if (connection == NULL) {
+                goto out;
+        }
+
+        manager = ck_manager_new ();
+
+        if (manager == NULL) {
                 goto out;
         }
 
@@ -310,15 +318,7 @@ main (int    argc,
                 goto out;
         }
 
-        g_debug ("initializing console-kit-daemon %s", VERSION);
-
         create_pid_file ();
-
-        manager = ck_manager_new ();
-
-        if (manager == NULL) {
-                goto out;
-        }
 
         loop = g_main_loop_new (NULL, FALSE);
 
